[gd_scene load_steps=11 format=3 uid="uid://bhpk2s08oaokn"]

[ext_resource type="Script" path="res://Components/confirm_password_modal.gd" id="1_1funp"]
[ext_resource type="StyleBox" uid="uid://b4xgb6l5osc02" path="res://Resources/CustomResource/SignIn.tres" id="2_s3emx"]
[ext_resource type="StyleBox" uid="uid://swwmbq60e0jw" path="res://Resources/CustomResource/SignInButton.tres" id="3_q8k21"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j3ygg"]
bg_color = Color(0, 0, 0, 0.847059)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_juile"]
bg_color = Color(0.0705882, 0.054902, 0.14902, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u10l4"]
content_margin_left = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.878431, 0.223529, 0.992157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ypu32"]
content_margin_left = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.164706, 0.152941, 0.235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kq37o"]
bg_color = Color(0.0430392, 0.0430392, 0.0430392, 0.827451)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8sfkx"]
bg_color = Color(0.388235, 0.270588, 0.929412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vgkgs"]
bg_color = Color(0.878431, 0.223529, 0.992157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ConfirmPasswordModal" type="Panel"]
auto_translate_mode = 1
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_j3ygg")
script = ExtResource("1_1funp")

[node name="Panel" type="Panel" parent="."]
auto_translate_mode = 1
custom_minimum_size = Vector2(500, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -125.0
offset_right = 250.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_juile")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.0
offset_top = -121.0
offset_right = 263.0
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 169)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.878431, 0.223529, 0.992157, 1)
theme_override_font_sizes/font_size = 20
text = "Please confirm your password to continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ConfirmationContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
alignment = 1

[node name="PasswordField" type="LineEdit" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxFlat_u10l4")
theme_override_styles/normal = ExtResource("2_s3emx")
placeholder_text = "Password"
caret_blink = true
secret = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="HBoxContainer2" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
alignment = 1

[node name="SubmitButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxFlat_ypu32")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_kq37o")
theme_override_styles/hover = SubResource("StyleBoxFlat_8sfkx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vgkgs")
theme_override_styles/normal = ExtResource("3_q8k21")
text = "SUBMIT"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="text_submitted" from="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/VBoxContainer/VBoxContainer/PasswordField" to="." method="_on_password_field_text_submitted"]
[connection signal="button_up" from="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2/SubmitButton" to="." method="_on_submit_button_button_up"]
